--- a/linux/index.html
+++ b/linux/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <!--
-      Salvador, 19 de julho de 2017
-      Arthur Félix dos santos Grassi @artfesg
+      ©2017
+      @artfesg
     -->
     <title>Linux para Brasileiros</title>
   </head>
