--- a/linux/p.html
+++ b/linux/p.html
@@ -11,8 +11,9 @@
     <h1>Linux para Brasileiros</h1>
     <h2></h2>
     <p></p>
-    <a>
-      Fonte: https://en.wikipedia.org/wiki/Linux
+    <!--
+      Fonte:
+        https://en.wikipedia.org/wiki/Linux
     -->
   </body>
 </html>
